--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'org.litepal.android:core:1.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
